<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imItem"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_my_books" />

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_book_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imItem"
        app:layout_constraintStart_toStartOf="@+id/imItem"
        app:layout_constraintTop_toBottomOf="@+id/imItem" />

    <EditText
        android:id="@+id/edTel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_phone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imItem"
        app:layout_constraintStart_toStartOf="@+id/imItem"
        app:layout_constraintTop_toBottomOf="@+id/edTitle" />

    <EditText
        android:id="@+id/edDisc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/edit_discription"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imItem"
        app:layout_constraintStart_toStartOf="@+id/imItem"
        app:layout_constraintTop_toBottomOf="@+id/edTel" />
</androidx.constraintlayout.widget.ConstraintLayout>